# algolabra-projekti

./: README.md  pyproject.toml
dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
dokumentaatio/viikkoraportit/: viikko1.md  viikko2.md  viikko3.md  viikko4  viikko4.md  viikko5.md  viikko6.md
src/: ai.py  game.py  main.py
src/tests/: main_test.py
