[tool.poetry]
name = "algolabra"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
coverage = "^7.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
